<resources>
    <string name="app_name">StayHealthy_android_app</string>
    <string name="username_hint">123@gmail.com</string>
    <string name="period_string">Period</string>
    <string name="water_string">Water</string>
    <string name="diet_string">Diet</string>
    <string name="workout_string">Workout</string>
    <string name="previous_button_string">\u003c-</string>
    <string name="next_button_string">-\u003e</string>
    <string name="month_year_string">July 2022</string>
    <string name="date_string">Wednesday, July 20, 2022</string>
    <string name="monday_string">Mon</string>
    <string name="tuesday_string">Tue</string>
    <string name="wednesday_string">Wed</string>
    <string name="thursday_string">Thu</string>
    <string name="friday_string">Fri</string>
    <string name="saturday_string">Sat</string>
    <string name="sunday_string">Sun</string>
    <string name="day_cell_string">1</string>
    <string name="add_period_string">Add Period</string>
    <string name="add_flow_string">Add Flow</string>
    <string name="add_symptoms_string">Add Symptoms</string>
    <string name="add_mood_string">Add Mood</string>
    <string name="flow_string">Flow Level</string>
    <string name="symptoms_string">Symptoms</string>
    <string name="mood_string">Mood</string>
    <string name="period_prediction_title_string">Period Prediction</string>
    <string name="period_prediction_string">Your period is likely to start on: No Record</string>
    <string name="period_cycle_history_string">Cycle History</string>
    <string name="period_recent_string">Recent Period</string>
    <string name="period_range_string">June 29 - July 5</string>
    <string name="symptoms_options_string">Stomachache, Headache, Chilling</string>
    <string name="flow_light_string">Light</string>
    <string name="angry_face_emoji">😠</string>
    <string name="neutral_face_emoji">😐</string>
    <string name="crying_face_emoji">😭</string>
    <string name="disgust_emoji">🤮</string>
    <string name="happy_face_emoji">😃</string>
    <string name="prediction_date_string">July 25</string>
    <string name="health_record_string">Health Record</string>
    <string name="add_water_string">Add Water</string>
    <string name="add_diet_string">Add Diet</string>
    <string name="add_workout_string">Add Workout</string>
    <string name="ok_string">OK</string>
    <string name="cancel_string">Cancel</string>
    <string name="select_month_year_string">Select Month and Year</string>
    <string name="workout_title_str">WorkOut</string>
    <string name="editWorkout_title_str">Edit WorkOut Goal</string>
    <string name="calories_label">Cal</string>
    <string name="edit_goal">Add Workout Goal for Today</string>
    <string name="total_time_editGoal_LB">Total Workout Time: </string>
    <string name="total_calories_editGoal_LB">Total Workout Calories: </string>
    <string name="min_LB">min</string>
    <string name="no_record_string">No Record</string>
    <string name="days_string">28 Days</string>
    <string-array name="flow_level_array">
        <item>Light</item>
        <item>Medium</item>
        <item>Heavy</item>
    </string-array>
    <string-array name="symptoms_array">
        <item>Abdominal Cramps</item>
        <item>Stomachache</item>
        <item>Headache</item>
        <item>Chills</item>
    </string-array>
    <string-array name="mood_array">
        <item>😃</item>
        <item>😉</item>
        <item>😐</item>
        <item>😪</item>
        <item>😣</item>
        <item>😫</item>
        <item>😭</item>
        <item>🤮</item>
        <item>😠</item>
    </string-array>
    <string name="select_period_range_string">Select Period Range</string>
    <string name="choose_flow_level_string">Select Flow Level</string>
    <string name="choose_symptoms_string">Select Symptoms</string>
    <string name="choose_mood_string">Select Mood</string>
    <string name="had_flow_string">Had Flow</string>
    <string name="no_flow_string">No Flow</string>
    <string name="start_date_string">Start Date</string>
    <string name="end_date_string">End Date</string>
    <string name="cycle_range_string">Cycle Range</string>
    <string name="title_activity_profile_page">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="test">Test</string>
    <string name="dash_string">-</string>
    <string name="expand_string">expand</string>
    <string name="ranges">Ranges</string>
    <string name="cycle_range">Cycle Range</string>
    <string name="total_days">Total Days</string>
    <string name="award_icon">Award Icon</string>
    <string name="received">Received</string>
    <string name="go_for_it">Go For it</string>
    <string name="water_drink_goal_100">Water Drink Goal 100%</string>
    <string name="today">Today</string>
    <string name="water_drink_goal_100_3_days">Water Drink Goal 100% (3 Days)</string>
    <string name="_1_3_days">1/3 Days</string>
    <string name="hi">Hi,\u0020</string>
    <string name="add_string">Add</string>
    <string name="likely_to_start_on_string">Likely to Start on</string>
    <string name="_0_percent_string">0%</string>
    <string name="goal_string">Goal</string>

    <string-array name="workout_activity_numbers">
        <item>choose activity number by click</item>
        <item>1 workout activity</item>
        <item>2 workout activities</item>
        <item>3 workout activities</item>
        <item>4 workout activities</item>
    </string-array>

    <string-array name="workout_activities">
        <item>choose workout activity</item>
        <item>HIIT</item>
        <item>Running</item>
        <item>Swimming</item>
        <item>Dancing</item>
        <item>Walking</item>
        <item>Hiking</item>
        <item>Jogging</item>
        <item>Biking</item>
        <item>Playing Badminton</item>
        <item>Playing Basketball</item>
        <item>Playing Frisbee</item>
    </string-array>

    <string-array name="workout_time_range">
        <item>choose time</item>
        <item>10 min</item>
        <item>20 min</item>
        <item>30 min</item>
        <item>40 min</item>
        <item>50 min</item>
        <item>60 min</item>
        <item>70 min</item>
        <item>80 min</item>
        <item>90 min</item>
        <item>100 min</item>
        <item>110 min</item>
        <item>120 min</item>
    </string-array>

</resources>