<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/periodTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/calendarTitleLL"
        android:text="@string/period_string"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/calendarTitleLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/periodTitleTV">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/previousBTN"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous_button_string"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/month_year_string"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextBTN"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_button_string"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/daysOfWeekLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/calendarTitleLL"
        app:layout_constraintBottom_toTopOf="@id/calendarRV">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday_string"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday_string"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday_string"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday_string"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday_string"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday_string"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday_string"
            android:textAlignment="center"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/daysOfWeekLL"
        app:layout_constraintBottom_toTopOf="@id/periodContentSV"/>

    <ScrollView
        android:id="@+id/periodContentSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarRV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dateTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:text="@string/date_string"
                app:layout_constraintBottom_toTopOf="@id/periodDateTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/periodDateTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:text="@string/period_string"
                android:textStyle="bold"
                android:textSize="@dimen/title_size"
                app:layout_constraintBottom_toBottomOf="@+id/addPeriodDateBTN"
                app:layout_constraintEnd_toStartOf="@+id/addPeriodDateBTN"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/addPeriodDateBTN" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addPeriodDateBTN"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/horizontal_margin"
                app:icon="@drawable/ic_add_entry"
                app:iconSize="20dp"
                app:iconGravity="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/periodDateTV"
                app:layout_constraintTop_toBottomOf="@id/dateTV"
                android:contentDescription="@string/add_period_string"/>

            <TextView
                android:id="@+id/symptomsTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:text="@string/symptoms_string"
                android:textStyle="bold"
                android:textSize="@dimen/title_size"
                app:layout_constraintBottom_toBottomOf="@+id/addSymptomsBTN"
                app:layout_constraintEnd_toStartOf="@+id/addSymptomsBTN"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/addSymptomsBTN" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addSymptomsBTN"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/horizontal_margin"
                app:icon="@drawable/ic_add_entry"
                app:iconSize="20dp"
                app:iconGravity="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/periodDateTV"
                app:layout_constraintTop_toBottomOf="@id/addPeriodDateBTN"
                android:contentDescription="@string/add_symptoms_string"/>

            <TextView
                android:id="@+id/moodTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:text="@string/mood_string"
                android:textStyle="bold"
                android:textSize="@dimen/title_size"
                app:layout_constraintBottom_toBottomOf="@+id/addMoodBTN"
                app:layout_constraintEnd_toStartOf="@+id/addMoodBTN"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/addMoodBTN" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addMoodBTN"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:layout_marginBottom="@dimen/vertical_margin"
                app:icon="@drawable/ic_add_entry"
                app:iconSize="20dp"
                app:iconGravity="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/periodDateTV"
                app:layout_constraintTop_toBottomOf="@id/addSymptomsBTN"
                app:layout_constraintBottom_toTopOf="@id/periodPredictionTitleTV"
                android:contentDescription="@string/add_mood_string"/>

            <TextView
                android:id="@+id/periodPredictionTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:text="@string/period_prediction_title_string"
                app:layout_constraintTop_toBottomOf="@id/addMoodBTN"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/periodPredictionTV"
                />

            <TextView
                android:id="@+id/periodPredictionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/period_prediction_string"
                android:textSize="@dimen/title_size"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/periodPredictionTitleTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>

