<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/startDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/horizontal_margin"
        android:gravity="center_vertical"
        android:text="@string/start_date_string"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/endDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:layout_toEndOf="@id/startDateTV"
        android:gravity="center_vertical"
        android:text="@string/end_date_string"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/cycleRangeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:layout_toEndOf="@id/endDateTV"
        android:gravity="center_vertical"
        android:text="@string/cycle_range_string"
        android:textColor="@color/black" />
</RelativeLayout>