<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/periodTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="40dp"
        android:text="@string/period_string"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintBottom_toTopOf="@id/startDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:text="@string/start_date_string"
        app:layout_constraintBottom_toTopOf="@id/cycleHistoryRV"
        app:layout_constraintTop_toBottomOf="@id/periodTitleTV"
        app:layout_constraintEnd_toStartOf="@id/endDate"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:text="@string/end_date_string"
        app:layout_constraintBottom_toTopOf="@id/cycleHistoryRV"
        app:layout_constraintTop_toBottomOf="@id/periodTitleTV"
        app:layout_constraintStart_toEndOf="@id/startDate" />

    <TextView
        android:id="@+id/cycleRanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:text="@string/cycle_range_string"
        app:layout_constraintBottom_toTopOf="@id/cycleHistoryRV"
        app:layout_constraintTop_toBottomOf="@id/periodTitleTV"
        app:layout_constraintStart_toEndOf="@id/endDate"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cycleHistoryRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cycleRanges" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>